--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   {{title}}
 </h1>
 
-<div style="background-color: yellow">
+<!-- <div style="background-color: yellow">
   <driver [driver]="{plates: '1', car: '2', driver: '3'}"></driver>
 </div>
 <div style="background-color: green">
@@ -10,4 +10,6 @@
 </div>
 <div style="background-color: red">
   <client [client]="{m: 'bla', p: 'bla bla', name: 'bla bla', commercialName: 'blabla', phone: 'bla', city: 'bla', postCode: 42, region: 'bla', address: 'bla', taxNumber: 42, vatNumber: 42, contacts: 'bla', contract: { number: 'bla', date: '2017-07-09T20:43:51.123Z' }}"></client>
-</div>
+</div> -->
+
+<router-outlet></router-outlet>
