huge and bad update [do not do it]

--- a/src/app/forms/driver/driver.component.html
+++ b/src/app/forms/driver/driver.component.html
@@ -5,12 +5,12 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      <div style="width: 100%">Plates</div>
-      <editable-label style="width: 100%" [value]='driver.plates' [editable]='editable'></editable-label>
+      <div>Plates</div>
+      <editable-label  [value]='driver.plates' [editable]='editable'></editable-label>
     </div>
     <div class="col-xs-6">
-      <div style="width: 100%">Car</div>
-      <editable-label style="width: 100%" [value]='driver.car' [editable]='editable'></editable-label>
+      <div>Car</div>
+      <editable-label  [value]='driver.car' [editable]='editable'></editable-label>
     </div>
   </div>
 </div>
