--- a/src/app/forms/product/product.component.html
+++ b/src/app/forms/product/product.component.html
@@ -9,22 +9,22 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-      <div style="width: 100%">Code</div>
-      <editable-label style="width: 100%" [value]='product.code' [editable]='editable' ></editable-label>
+      <div>Code</div>
+      <editable-label  [value]='product.code' [editable]='editable' ></editable-label>
     </div>
     <div class="col-xs-4">
-      <div style="width: 100%">Certificate</div>
-      <editable-label style="width: 100%" [value]='product.certificate' [editable]='editable' ></editable-label>
+      <div>Certificate</div>
+      <editable-label  [value]='product.certificate' [editable]='editable' ></editable-label>
     </div>
     <div class="col-xs-4">
-      <div style="width: 100%">Scale</div>
-      <editable-label style="width: 100%" [value]='product.scale' [editable]='editable' ></editable-label>
+      <div>Scale</div>
+      <editable-label  [value]='product.scale' [editable]='editable' ></editable-label>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-4 col-xs-offset-4">
-      <div style="width: 100%">Amount:</div>
-      <editable-label style="width: 100%" [value]='product.amount' [editable]='editable' type="number"></editable-label>
+      <div>Amount:</div>
+      <editable-label  [value]='product.amount' [editable]='editable' type="number"></editable-label>
     </div>
   </div>
 </div>
